tests/macro_tests/invalid_ident.stderr
error: expected string literal
  --> $DIR/invalid_ident.rs:11:13
   |
11 |     #[ident(3)]
   |             ^
